# dene

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
examples/: hello_world.rs
src/: action.rs  app.rs  dispatch.rs  element.rs  elements.rs  entity.rs  event.rs  executor.rs  focus.rs  geometry.rs  global.rs  interactive.rs  keybind.rs  layout.rs  lib.rs  panel.rs  subscribtion.rs  terminal.rs  utils.rs  view.rs  window.rs
src/app/: async_app.rs
src/elements/: div.rs  empty.rs  input.rs  text.rs
