# SPDX-License-Identifier: Apache-2.0

[package]
name = "dene"
version = "0.1.0"
edition = "2024"

[features]
default = ["crossterm", "derive_more", "rustc-hash", "taffy", "tokio", "toml"]

crossterm = ["crossterm/event-stream"]
derive_more = ["derive_more/debug", "derive_more/deref", "derive_more/deref_mut"]
rustc-hash = ["rustc-hash/std"]
taffy = ["taffy/flexbox", "taffy/grid", "taffy/block_layout", "taffy/taffy_tree", "taffy/std"]
tokio = ["tokio/rt-multi-thread", "tokio/macros"]
toml = ["toml/serde", "toml/parse"]

[dependencies]
anyhow = { version = "1.0.103", default-features = false }
bitflags = { version = "2.13.0", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
derive_more = { version = "2.1.1", default-features = false }
futures-util = { version = "0.3.32", default-features = false }
inventory = { version = "0.3.24", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
rustc-hash = { version = "2.1.3", default-features = false }
slotmap = { version = "1.1.1", default-features = false }
smallvec = { version = "1.15.2", default-features = false }
taffy = { version = "0.12.1", default-features = false }
tokio = { version = "1.52.3", default-features = false }
toml = { version = "1.1.3", default-features = false }


[[example]]
name = "hello_world"
