# SPDX-License-Identifier: Apache-2.0

[package]
name = "dene"
version = "0.1.0"
authors = ["Alibek<freed.alibek@gmail.com>"]
edition = "2024"
rust-version = "1.94.0"
description = "powerful and blazingly fast terminal user interface library."
readme = "README.md"
homepage = "https://codeberg.org/lolp1ke/dene"
repository = "https://codeberg.org/lolp1ke/dene"
license = "Apache-2.0"
keywords = ["tui", "terminal"]
categories = ["command-line-interface", "gui"]
exclude = ["*.log"]
include = ["LICENSE-APACHE", "**/*.rs", "Cargo.toml"]
# publish = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [
  "crossterm",
  "derive_more",
  "futurus-util",
  "rustc-hash",
  "tracing",
  "taffy",
  "tokio",
  "toml",
]

crossterm = ["crossterm/event-stream"]
derive_more = [
  "derive_more/debug",
  "derive_more/deref",
  "derive_more/deref_mut",
]
futurus-util = ["futures-util/alloc"]
rustc-hash = ["rustc-hash/std"]
tracing = [
  "tracing-subscriber/env-filter",
  "tracing-subscriber/std",
  "tracing-subscriber/registry",
  "tracing-subscriber/fmt",
  "tracing-subscriber/ansi",
]
taffy = [
  "taffy/flexbox",
  "taffy/grid",
  "taffy/block_layout",
  "taffy/taffy_tree",
  "taffy/std",
]
tokio = ["tokio/rt-multi-thread", "tokio/macros", "tokio/sync", "tokio/time"]
toml = ["toml/serde", "toml/parse"]

[dependencies]
anyhow = { version = "1.0.104", default-features = false }
async-task = { version = "4.7.1", default-features = false }
bitflags = { version = "2.13.1", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
derive_more = { version = "2.1.1", default-features = false }
futures-util = { version = "0.3.33", default-features = false }
inventory = { version = "0.3.24", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
ropey = { version = "1.6.1", default-features = false }
rustc-hash = { version = "2.1.3", default-features = false }
slotmap = { version = "1.1.1", default-features = false }
smallvec = { version = "1.15.2", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false }
taffy = { version = "0.12.2", default-features = false }
tokio = { version = "1.53.1", default-features = false }
toml = { version = "1.1.3", default-features = false }


[[example]]
name = "hello_world"
